# slmtop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/slm/: __init__.py  cli.py  formatting.py  models.py  parsers.py  slurm.py
tests/: test_cli.py  test_parsers.py
