[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slm"
version = "0.1.0"
description = "Clear Slurm resource views for nodes, GPUs, memory, CPUs, and queued jobs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Wei Hongxin" }
]
keywords = ["slurm", "hpc", "gpu", "cluster", "scheduler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Clustering",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourname/slm"
Issues = "https://github.com/yourname/slm/issues"

[project.scripts]
slmtop = "slm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
